DOCS: Enhanced Api Docs for Materia Post
